Fix: min height button overlapping issue with the elements

--- a/src/components/ContentExplorer/Content.scss
+++ b/src/components/ContentExplorer/Content.scss
@@ -2,7 +2,7 @@
 
 .bce-content {
     display: flex;
-    flex: 1;
+    flex: 1 0 230px;
     flex-direction: column;
     position: relative;
 }
