--- a/src/components/ContentExplorer/ItemList.scss
+++ b/src/components/ContentExplorer/ItemList.scss
@@ -2,7 +2,6 @@
 
 .bce-item-grid {
     flex: 1;
-    min-height: 300px;
 
     // sass-lint:disable class-name-format
     .ReactVirtualized__Table__Grid {
