--- a/src/components/ContentUploader/DroppableContent.scss
+++ b/src/components/ContentUploader/DroppableContent.scss
@@ -1,12 +1,11 @@
 .bcu-droppable-content {
     display: flex;
-    flex: 1;
+    flex: 1 0 200px;
     flex-direction: column;
     position: relative;
 
     .bcu-item-list {
         flex: 1;
-        min-height: 300px;
         position: relative;
 
         // sass-lint:disable class-name-format
