--- a/src/components/EmptyState/EmptyState.scss
+++ b/src/components/EmptyState/EmptyState.scss
@@ -4,5 +4,4 @@
     flex: 1;
     flex-direction: column;
     justify-content: center;
-    min-height: 300px;
 }
