--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
     background: $almost-white;
     border-bottom: 1px solid $off-white;
     display: flex;
-    height: 70px;
+    flex: 0 0 70px;
     justify-content: space-between;
     padding: 0 25px 0 0;
 
