--- a/src/components/SubHeader/Sort.scss
+++ b/src/components/SubHeader/Sort.scss
@@ -6,7 +6,7 @@
     display: flex;
 }
 
-.buik-sort-btn {
+.buik-btn.buik-sort-btn {
     padding: 5px 16px;
 
     .bce:not(.buik-is-small) & {
